# ffuzzy

./: .gitignore  COMPATIBILITY.md  Cargo.toml  README.md
dev/: todo-on-msrv-updates.md
dev/generator/: update-substitution-template.rs.txt
dev/generator/base64/: process-rfc4648-test-1.awk  process-rfc4648-test.sh
dev/generator/hash-blocksize-debruijn/: Cargo.toml
dev/hash/dual/: availability_checker.py
dev/prover/compare/: blocksize_capping_theorem.py  blocksize_capping_theorem.v  lcs_distance_algorithm_oi_2024.py  lcs_length_algorithm_hyyro_2004.py
dev/prover/generate/: rolling_hash_dependency.py
ffuzzy/: Cargo.toml  build.rs
ffuzzy/data/testsuite/: generate-small.md  generate-small.ssdeep.txt
ffuzzy/data/testsuite/compare/: big_cluster.uniform_blocksize.4x128.txt  malware_all.uniform_blocksize.16x32.txt  various.txt
ffuzzy/data/testsuite/generate/: large_trigger_last_hash.bin.tar.zst  large_trigger_last_hash.bin.zstd
ffuzzy/docs/: coverage-with-grcov.md  coverage-with-llvm-cov.md
ffuzzy/src/: _docs.rs  base64.rs  compare.rs  compare_easy.rs  docs.rs  generate.rs  generate_easy.rs  generate_easy_std.rs  hash.rs  hash_dual.rs  internals.rs  intrinsics.rs  lib.rs  macros.rs  test_utils.rs  tests.rs  utils.rs
ffuzzy/src/_docs/: compat_policy.md  compat_semver_violation.md  compat_semver_violation.rs  internals.rs  planned_changes.md  planned_changes.rs  readme.md
ffuzzy/src/_docs/internals/: impl_notes.md  impl_notes.rs
ffuzzy/src/base64/: tests.rs
ffuzzy/src/compare/: position_array.rs  test_utils.rs  tests.rs
ffuzzy/src/compare/position_array/: tests.rs
ffuzzy/src/compare_easy/: tests.rs
ffuzzy/src/docs/: compat_policy.md  compat_policy.rs  internals.rs  readme.md
ffuzzy/src/docs/internals/: impl_notes.md  impl_notes.rs
ffuzzy/src/generate/: fnv_table.rs  hashes.rs  tests.rs
ffuzzy/src/generate/hashes/: partial_fnv.rs  rolling_hash.rs
ffuzzy/src/generate/hashes/partial_fnv/: test_utils.rs  tests.rs
ffuzzy/src/generate/hashes/rolling_hash/: test_utils.rs  tests.rs
ffuzzy/src/generate_easy/: tests.rs
ffuzzy/src/generate_easy_std/: tests.rs
ffuzzy/src/hash/: algorithms.rs  block.rs  parser_state.rs  test_utils.rs  tests.rs
ffuzzy/src/hash/algorithms/: tests.rs
ffuzzy/src/hash/block/: tests.rs
ffuzzy/src/hash/parser_state/: tests.rs
ffuzzy/src/hash_dual/: tests.rs
ffuzzy/src/internals/: base64.rs  compare.rs  compare_easy.rs  generate.rs  generate_easy.rs  generate_easy_std.rs  hash.rs  hash_dual.rs  impl_notes.rs  intrinsics.rs  test_utils.rs  utils.rs
ffuzzy/src/internals/base64/: tests.rs
ffuzzy/src/internals/compare/: position_array.rs  test_utils.rs  tests.rs
ffuzzy/src/internals/compare/position_array/: tests.rs
ffuzzy/src/internals/compare_easy/: tests.rs
ffuzzy/src/internals/generate/: tests.rs
ffuzzy/src/internals/generate/hashes/: partial_fnv.rs  rolling_hash.rs
ffuzzy/src/internals/generate/hashes/partial_fnv/: tests.rs
ffuzzy/src/internals/generate/hashes/rolling_hash/: tests.rs
ffuzzy/src/internals/generate_easy/: tests.rs
ffuzzy/src/internals/generate_easy_std/: tests.rs
ffuzzy/src/internals/hash/: algorithms.rs  block.rs  parser_state.rs  test_utils.rs  tests.rs
ffuzzy/src/internals/hash/algorithms/: tests.rs
ffuzzy/src/internals/hash/block/: tests.rs
ffuzzy/src/internals/hash/parser_state/: tests.rs
ffuzzy/src/internals/hash_dual/: tests.rs
ffuzzy/src/internals/intrinsics/: tests.rs
ffuzzy/src/internals/macros/: tests.rs
ffuzzy/src/internals/test_utils/: tests.rs
ffuzzy/src/internals/utils/: tests.rs
ffuzzy/src/intrinsics/: tests.rs
ffuzzy/src/macros/: tests.rs
ffuzzy/src/test_utils/: tests.rs
ffuzzy/src/utils/: tests.rs
(+5 files in other folders)
