[package]
name = "ffuzzy"
version = "0.2.10"
description = "Library to generate / parse / compare ssdeep Context Triggered Piecewise Hashes (CTPH)"
keywords = ["ssdeep", "fuzzy", "hash", "security", "clustering"]
homepage = "https://github.com/a4lg/ffuzzy"
repository = "https://github.com/a4lg/ffuzzy"
documentation = "https://docs.rs/ffuzzy"
license = "GPL-2.0-or-later"
edition = "2021"
rust-version = "1.56"
readme = "../README.md"
workspace = ".."
exclude = ["data/testsuite/generate/large_trigger_last_hash.bin.zstd"]

[lib]
name = "ssdeep"

[dependencies]
cfg-if = "1.0.0"
static_assertions = "1.1.0"

[dev-dependencies]
itertools = { version = "0.12.0", default-features = false }

[build-dependencies]
version_check = "0.9"

[features]
default = ["std", "easy-functions"]
std = ["alloc", "itertools/use_std"]
alloc = ["itertools/use_alloc"]
easy-functions = []
unsafe = ["unchecked"]
unchecked = []
opt-reduce-fnv-table = []
tests-slow = []
tests-very-slow = ["tests-slow"]
nightly = []
maint-lints = []

[package.metadata.docs.rs]
features = ["nightly", "unsafe", "unchecked"]
