[package]
name = "ffuzzy"
version = "0.3.6"
description = "Library to generate / parse / compare ssdeep Context Triggered Piecewise Hashes (CTPH)"
authors = ["Tsukasa OI", "Helmut Grohne", "Jesse Kornblum"]
keywords = ["ssdeep", "fuzzy", "hash", "security", "clustering"]
categories = ["algorithms", "encoding", "parser-implementations", "no-std::no-alloc"]
homepage = "https://github.com/a4lg/ffuzzy"
repository = "https://github.com/a4lg/ffuzzy"
documentation = "https://docs.rs/ffuzzy"
license = "GPL-2.0-or-later"
edition = "2021"
rust-version = "1.56"
readme = "../README.md"
workspace = ".."
exclude = []

[lib]
name = "ssdeep"

[dependencies]
cfg-if = "1.0.0"
static_assertions = "1.1.0"

[dev-dependencies]
glob = "0.3.1"
itertools = "0.12.1"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2.153"
tempfile = "=3.6.0"  # Keep MSRV <= 1.56

[build-dependencies]
version_check = "0.9"

[features]
default = ["std", "easy-functions"]
std = ["alloc"]
alloc = []
easy-functions = []
unsafe = ["unchecked", "unsafe-guarantee"]
unsafe-guarantee = []
unchecked = []
opt-reduce-fnv-table = []
strict-parser = []
tests-slow = []
tests-very-slow = ["tests-slow"]
nightly = []
unstable = ["nightly"]
maint-code = []
maint-lints = []

[package.metadata.docs.rs]
features = ["unstable", "unsafe", "unchecked"]
